<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context="com.allelink.wzyx.activity.LoginActivity">
    <!--导航栏开始-->
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <Button
            android:id="@+id/btn_login_back"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_selector"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/black_666"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!--导航栏结束-->
    <!--品牌logo开始-->
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_logo"
        android:layout_width="48dp"
        android:layout_height="48dp" />
    <!--品牌logo结束-->
    <!--输入框开始-->
    <android.support.v7.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <!--手机号输入框开始-->
        <android.support.design.widget.TextInputLayout
            android:gravity="center_vertical"
            app:hintTextAppearance="@style/EditTextHintStyle"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_phone_number"
                android:inputType="text"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_people"
                android:hint="@string/enter_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>
        <!--手机号输入框结束-->
        <View
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <!--密码输入框开始-->
        <android.support.design.widget.TextInputLayout
            android:gravity="center_vertical"
            app:hintTextAppearance="@style/EditTextHintStyle"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_password"
                android:inputType="textPassword"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_lock"
                android:hint="@string/enter_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>
        <!--密码输入框结束-->
    </android.support.v7.widget.LinearLayoutCompat>
    <!--注册，忘记密码文字开始-->
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="1"
            android:id="@+id/tv_login_register"
            android:gravity="left"
            android:text="@string/register"
            android:textSize="12sp"
            android:textColor="@color/brands_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_weight="1"
            android:id="@+id/tv_login_forget_password"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textSize="12sp"
            android:textColor="@color/brands_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>
    <!--注册，忘记密码文字结束-->
    <!--登陆按钮开始-->
    <Button
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/btn_login_login"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_login_selector"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <!--登陆按钮结束-->

    <!--跳过登录，方便调试-->
    <TextView
        android:visibility="gone"
        android:id="@+id/tv_login_skip"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_gravity="bottom|center"
        android:text="@string/skip"
        android:textColor="@color/brands_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--跳过登录，方便调试-->
</LinearLayout>
